--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ input[type="email"]:focus {
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    /* Lady Pinzon: estas 3 lineas de a continuacion se pueden escribir como: border: 10px solid #FFFFFF;*/
     border-width: 10px;
     border-color: #FFFFFF;
     border-style: solid;
@@ -74,10 +75,12 @@ input[type="email"]:focus {
 }
 
 #contact {
+    /* Lady Pinzon: propiedad duplicada mas abajo*/
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    /* Lady Pinzon: propiedad duplicada mas arriba*/
     position: absolute;
     z-index: 2;
     color: #000000;
@@ -179,6 +182,7 @@ h2 {
 }
 .about h2{
     font-size: 6em;
+    /* Lady Pinzon: Las siguientes dos lineas se pueden escribir como: margin: 0 0 0 1em*/
     margin: 0;
     margin-left: 1em;
 }
@@ -213,6 +217,7 @@ a:hover {
 }
 .card {
     position: relative;
+    /* Lady Pinzon: Las siguientes tres lineas se pueden escribir como: background: #fcd62d no-repeat center;*/
     background-color: #fcd62d;
     background-repeat: no-repeat;
     background-position: center; 
